--- a/examples/pay_and_login.html
+++ b/examples/pay_and_login.html
@@ -134,6 +134,15 @@
             return new Uint8Array(arr);
         };
 
+        const url = 'http://127.0.0.1:8080/price';
+        var xmlgethttp = new XMLHttpRequest();
+        xmlgethttp.onreadystatechange = function () {
+            console.log("price result")
+            console.log(xmlgethttp.responseText);
+        }
+        xmlgethttp.open("GET", url, false);
+        xmlgethttp.send();
+
         Jose.crypto.subtle.digest({ name: "SHA-256" }, arrayFromString(js_pub_key["n"])).then(function (hashfromarray) {
             console.log("hash of public key array converted from string");
             console.log(js_pub_key["n"])
@@ -149,7 +158,7 @@
                 console.log("double hash b58 encoding");
                 var Base58_character = "123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz";
                 var double_encoded_in_b58 = to_b58(new Uint8Array(double_hashfromarray), Base58_character);
-                content_to_signer = JSON.stringify({"kid":double_encoded_in_b58, "ts":Date.now()})
+                content_to_signer = JSON.stringify({ "kid": double_encoded_in_b58, "ts": Date.now() })
                 console.log(content_to_signer);
                 var cryptographer_sign = new Jose.WebCryptographer();
                 cryptographer_sign.setContentSignAlgorithm("RS256");
@@ -162,14 +171,14 @@
                             signature_in_json = JSON.stringify(message);
                             console.log("signature");
                             console.log(signature_in_json);
-                            var to_server_payload = { "key": js_pub_key, "signature": signature_in_json, "request":"ss_cert"};
+                            var to_server_payload = { "key": js_pub_key, "signature": signature_in_json, "request": "ss_cert" };
                             to_encrypt_in_string = JSON.stringify(to_server_payload)
                             console.log(to_encrypt_in_string);
                             encrypter.encrypt(to_encrypt_in_string).then(function (result) {
                                 console.log(result);
                                 plaintext.textContent = to_encrypt_in_string
                                 ciphertext.textContent = result;
-                                const url = 'http://127.0.0.1:8080/?' + "code=" + result;
+                                const url = 'http://127.0.0.1:8080/cert.info?' + "code=" + result;
                                 var xmlhttp = new XMLHttpRequest();
                                 xmlhttp.onreadystatechange = function () {
                                     console.log("result")
