client's signature is in dictionary format, instead of JSON string

--- a/examples/pay_and_login.html
+++ b/examples/pay_and_login.html
@@ -175,9 +175,8 @@
                                         signer
                                             .sign(content_to_signer, null, {})
                                             .then(function (message) {
-                                                signature_in_json = JSON.stringify(message);
                                                 js_pub_key["kid"] = double_encoded_in_b58
-                                                var to_server_payload = { "key": js_pub_key, "signature": signature_in_json, "request": "ss_cert" };
+                                                var to_server_payload = { "key": js_pub_key, "signature": message, "request": "ss_cert" };
                                                 to_encrypt_in_string = JSON.stringify(to_server_payload)
                                                 console.log("prepare to encrypt")
                                                 console.log(server_public_key_from_server)
