--- a/examples/pay_and_login.html
+++ b/examples/pay_and_login.html
@@ -123,7 +123,7 @@
             return new Uint8Array(arr);
         };
 
-        const ugetrl = 'http://127.0.0.1:8080/price';
+        const ugetrl = 'http://127.0.0.1:8080/price.json';
         var xmlgethttp = new XMLHttpRequest();
         xmlgethttp.onreadystatechange = function () {
             console.log("price result");
